--- a/guide/templates/index.html
+++ b/guide/templates/index.html
@@ -118,6 +118,15 @@
         </li>
         
         <li>
+          <a href="/guide/http_server">
+             HTTP(s) Server
+          </a>
+          <ul class="menu-l3">
+            
+          </ul>
+        </li>
+        
+        <li>
           <a href="/guide/ip-address">
              IP Address
           </a>
@@ -620,7 +629,7 @@
 </nav>
     <div class="main">
       <div class="w3-container ad">
-  <a href="https://code.labstack.com/program">
+  <a href="https://code.labstack.com/new">
     <img
       style="margin-bottom: 8px;"
       src="https://echo.labstack.com//images/code.png"
@@ -640,6 +649,16 @@
             <section>
               
               
+                <style>
+                    .hanchor {
+                        font-size: 80%;
+                        visibility: hidden;
+                        color: silver;
+                    }
+                    h1:hover a, h2:hover a, h3:hover a, h4:hover a {
+                        visibility: visible;
+                    }
+                </style>
               <ul class="breadcrumb">
                 
                 
@@ -660,7 +679,7 @@
                 
               </ul>
               <h1>Templates</h1>
-              <h2 id="template-rendering">Template Rendering</h2>
+                <h2 id="template-rendering">Template Rendering<a href="#template-rendering" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
 <p><code>Context#Render(code int, name string, data interface{}) error</code> renders a template
 with data and sends a text/html response with status code. Templates can be registered by setting <code>Echo.Renderer</code>, allowing us to use any template engine.</p>
 <p>Example below shows how to use Go <code>html/template</code>:</p>
@@ -672,7 +691,7 @@ with data and sends a text/html response with status code. Templates can be regi
 }
 
 <span style="color:#66d9ef">func</span> (<span style="color:#a6e22e">t</span> <span style="color:#f92672">*</span><span style="color:#a6e22e">Template</span>) <span style="color:#a6e22e">Render</span>(<span style="color:#a6e22e">w</span> <span style="color:#a6e22e">io</span>.<span style="color:#a6e22e">Writer</span>, <span style="color:#a6e22e">name</span> <span style="color:#66d9ef">string</span>, <span style="color:#a6e22e">data</span> <span style="color:#66d9ef">interface</span>{}, <span style="color:#a6e22e">c</span> <span style="color:#a6e22e">echo</span>.<span style="color:#a6e22e">Context</span>) <span style="color:#66d9ef">error</span> {
-    <span style="color:#66d9ef">return</span> <span style="color:#a6e22e">t</span>.<span style="color:#a6e22e">templates</span>.<span style="color:#a6e22e">ExecuteTemplate</span>(<span style="color:#a6e22e">w</span>, <span style="color:#a6e22e">name</span>, <span style="color:#a6e22e">data</span>)
+    <span style="color:#a6e22e">rn</span> <span style="color:#a6e22e">t</span>.<span style="color:#a6e22e">templates</span>.<span style="color:#a6e22e">ExecuteTemplate</span>(<span style="color:#a6e22e">w</span>, <span style="color:#a6e22e">name</span>, <span style="color:#a6e22e">data</span>)
 }
 </code></pre></div></li>
 <li>
@@ -692,11 +711,11 @@ with data and sends a text/html response with status code. Templates can be regi
 <li>
 <p>Render a template inside your handler</p>
 <div class="highlight"><pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-go" data-lang="go"><span style="color:#66d9ef">func</span> <span style="color:#a6e22e">Hello</span>(<span style="color:#a6e22e">c</span> <span style="color:#a6e22e">echo</span>.<span style="color:#a6e22e">Context</span>) <span style="color:#66d9ef">error</span> {
-    <span style="color:#66d9ef">return</span> <span style="color:#a6e22e">c</span>.<span style="color:#a6e22e">Render</span>(<span style="color:#a6e22e">http</span>.<span style="color:#a6e22e">StatusOK</span>, <span style="color:#e6db74">&#34;hello&#34;</span>, <span style="color:#e6db74">&#34;World&#34;</span>)
+    <span style="color:#a6e22e">rn</span> <span style="color:#a6e22e">c</span>.<span style="color:#a6e22e">Render</span>(<span style="color:#a6e22e">http</span>.<span style="color:#a6e22e">StatusOK</span>, <span style="color:#e6db74">&#34;hello&#34;</span>, <span style="color:#e6db74">&#34;World&#34;</span>)
 }
 </code></pre></div></li>
 </ol>
-<h3 id="advanced---calling-echo-from-templates">Advanced - Calling Echo from templates</h3>
+<h3 id="advanced---calling-echo-from-templates">Advanced - Calling Echo from templates<a href="#advanced---calling-echo-from-templates" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h3>
 <p>In certain situations it might be useful to generate URIs from the templates. In order to do so, you need to call <code>Echo#Reverse</code> from the templates itself. Golang&rsquo;s <code>html/template</code> package is not the best suited for this job, but this can be done in two ways: by providing a common method on all objects passed to templates or by passing <code>map[string]interface{}</code> and augmenting this object in the custom renderer. Given the flexibility of the latter approach, here is a sample program:</p>
 <p><code>template.html</code></p>
 <div class="highlight"><pre style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-html" data-lang="html">&lt;<span style="color:#f92672">html</span>&gt;
