deploy: 70d3ec7b083f0560454f0013ab7b79967076252c

--- a/styles/base.css
+++ b/styles/base.css
@@ -451,6 +451,10 @@ ul.breadcrumb li + li:before {
     padding: 0 16px
 }
 
+.sponsor img {
+    height: auto;
+}
+
 .ad {
     width: 160px;
     position: fixed;
